--- a/HTML/inicio_pessoa_fisica.html
+++ b/HTML/inicio_pessoa_fisica.html
@@ -28,57 +28,36 @@
       <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="40" height="40">
       <span class="fs-5">Descubra Muriaé</span>
     </div>
-
-    <!-- Drop -->
-    <div class="dropdown">
-      <img src="https://i.pravatar.cc/150?img=3" class="rounded-circle dropdown-avatar-toggle" alt="Avatar"
-        id="avatarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-        style="width: 48px; height: 48px; object-fit: cover; cursor: pointer;">
-
-      <ul class="dropdown-menu dropdown-menu-end p-0 mt-2" aria-labelledby="avatarDropdown">
-        <li class="dropdown-header bg-azulPrimario text-white px-3 py-2">
-          <div class="fw-semibold" id="username">Fl1ckerPa</div>
-          <div class="text-white small" id="nome completo">Pedro Augusto Amaro Cunha</div>
-        </li>
-        <li>
-          <hr class="dropdown-divider my-1">
-        </li>
-        <li><a class="dropdown-item" href="#"><i class="bi bi-person-circle me-2"></i>Seu Perfil</a></li>
-        <li>
-          <hr class="dropdown-divider my-1">
-        </li>
-        <li><a class="dropdown-item" href="#"><i class="bi bi-person-vcard"></i> Seu Curriculo</a></li>
-        <li>
-          <hr class="dropdown-divider my-1">
-        </li>
-        <li><a class="dropdown-item" href="#"><i class="bi bi-clock-history"></i> Histórico de candidaturas </a></li>
-        <li>
-          <hr class="dropdown-divider my-1">
-        </li>
-        <li><a class="dropdown-item" href="#"><i class="bi bi-shop"></i> Seu Estabelecimento</a></li>
-        <li>
-          <hr class="dropdown-divider my-1">
-        </li>
-        <li><a class="dropdown-item" href="#"><i class="bi bi-gear me-2"></i> Settings</a></li>
-      </ul>
-    </div>
-    </div>
-    </div>
-    </div>
   </nav>
 </header>
 
-
 <body>
-
   <div id="sidebar" class="position-fixed start-0 bg-azulPrimario vh-100 d-none" style="width: 250px; top: 60px;">
-    <div id="sidebarContent" class="d-none">
-      <h5 class="mb-3 text-white" >Menu</h5>
-      <ul class="list-unstyled">
-        <li><a href="#" class="text-white text-decoration-none">Início</a></li>
-        <li><a href="#" class="text-white text-decoration-none">Serviços</a></li>
-        <li><a href="#" class="text-white text-decoration-none">Contato</a></li>
-      </ul>
+    <div id="sidebarContent" class="d-flex flex-column justify-content-between h-100 position-relative">
+      <div>
+        <h5 class="mb-3 text-white">Menu</h5>
+        <ul class="list-unstyled mt-4">
+          <li><a href="index.html" class="text-white text-decoration-none">Início</a></li>
+          <li><a href="servicos.html" class="text-white text-decoration-none">Serviços</a></li>
+          <li><a href="contato.html" class="text-white text-decoration-none">Contato</a></li>
+          <li><a href="curriculo.html" class="text-white text-decoration-none"><i class="bi bi-person-vcard"></i> Seu Currículo</a></li>
+          <li><a href="historico_candidaturas.html" class="text-white text-decoration-none"><i class="bi bi-clock-history"></i> Histórico de candidaturas</a></li>
+          <!-- <li><a href="estabelecimento.html" class="text-white text-decoration-none"><i class="bi bi-shop"></i> Seu Estabelecimento</a></li> Só vai aparecer quando o usuário for um estabelecimento -->
+        </ul>
+      </div>
+      <div class="dropdown dropup position-absolute start-0 bottom-0 mb-3 ms-3">
+        <img src="https://i.pravatar.cc/150?img=3" class="rounded-circle dropdown-avatar-toggle" alt="Avatar"
+          id="avatarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+          style="width: 48px; height: 48px; object-fit: cover; cursor: pointer;">
+        <ul class="dropdown-menu p-0 mb-2" aria-labelledby="avatarDropdown">
+          <li class="dropdown-header bg-azulPrimario text-white px-3 py-2">
+            <div class="fw-semibold" id="username">Fl1ckerPa</div>
+            <div class="text-white small" id="nome completo">Pedro Augusto Amaro Cunha</div>
+          </li>
+          <li><a href="perfil.html" class=" text-decoration-none"><i class="bi bi-person-circle me-2"></i>Seu Perfil</a></li>
+          <li><a href="settings.html" class=" text-decoration-none"><i class="bi bi-gear me-2"></i> Settings</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
