--- a/HTML/inicio_pessoa_fisica.html
+++ b/HTML/inicio_pessoa_fisica.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="Stylesheet" href="/CSS/index.css">
   <link rel="Stylesheet" href="/CSS/inicio_pagina_pessoa_fisica.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,66 +15,109 @@
 <!-- TROCAR O NOME DAS CLASSES VISANDO AS BOAS PRÁTICAS DE PROGRAMAÇÃO -->
 <!--TODO-->
 <header>
-  <nav class="navbar navbar-dark bg-azulPrimario fixed-top">
 
-    <!-- Logo à esquerda, alinhada verticalmente ao centro -->
-
-    <div class="d-flex justify-content-between align-items-center">
-      <button id="menuToggle" class="btn btn-outline-light">
-        <i class="bi bi-list"></i>
-      </button>
-
-      <img src="../IMG/logo_descubra_short.png" alt="Logo Descubra Muriaé" width="50" height="50">
-      <span class="fs-5">Descubra Muriaé</span>
-    </div>
-  </nav>
-</header>
-
-<body>
-  <div id="sidebar" class="position-fixed start-0 bg-azulPrimario vh-100 d-none" style="width: 250px; top: 60px;">
-    <div id="sidebarContent" class="d-flex flex-column justify-content-between h-100 position-relative">
-      <div>
-        <h5 class="mb-3 text-white">Menu</h5>
-        <ul class="list-unstyled mt-4">
-          <li><i class="bi bi-caret-right-fill"></i><a href="index.html" class="text-white text-decoration-none"><i class="bi bi-house-fill"></i>Início</a></li>
-          <li><i class="bi bi-caret-right-fill"></i><a href="contato.html" class="text-white text-decoration-none"><i class="bi bi-telephone-fill"></i>Contato</a></li>
-          <li><i class="bi bi-caret-right-fill"></i><a href="curriculo.html" class="text-white text-decoration-none"><i class="bi bi-person-vcard"></i> Seu Currículo</a></li>
-          <li><i class="bi bi-caret-right-fill"></i><a href="historico_candidaturas.html" class="text-white text-decoration-none"><i class="bi bi-clock-history"></i> Histórico de candidaturas</a></li>
-          <!-- <li><a href="estabelecimento.html" class="text-white text-decoration-none"><i class="bi bi-shop"></i> Seu Estabelecimento</a></li> Só vai aparecer quando o usuário for um estabelecimento -->
-        </ul>
-      </div>
-      <div class="dropdown dropup position-absolute start-0 bottom-0 mb-3 ms-3">
-        <img src="https://i.pravatar.cc/150?img=3" class="rounded-circle dropdown-avatar-toggle" alt="Avatar"
-          id="avatarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-          style="width: 48px; height: 48px; object-fit: cover; cursor: pointer;">
-        <ul class="dropdown-menu p-0 mb-2" aria-labelledby="avatarDropdown">
-          <li class="dropdown-header bg-azulPrimario text-white px-3 py-2">
-            <div class="fw-semibold" id="username">Fl1ckerPa</div>
-            <div class="text-white small" id="nome completo">Pedro Augusto Amaro Cunha</div>
-          </li>
-          <li><i class="bi bi-caret-right-fill"></i><a href="perfil.html" class=" text-decoration-none"><i class="bi bi-person-circle me-2"></i>Seu Perfil</a></li>
-          <li><i class="bi bi-caret-right-fill"></i><a href="settings.html" class=" text-decoration-none"><i class="bi bi-gear me-2"></i> Settings</a></li>
-        </ul>
+<!-- Inicio Barra De Navegação Desktop -->
+  <nav class="d-none d-md-block p-3 bg-azulPrimario">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"> <a href="/"
+        class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"> <svg class="bi me-2" width="40"
+          height="32" role="img" aria-label="Bootstrap">
+          <use xlink:href="#bootstrap"></use>
+        </svg> </a>
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+        <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+      </ul>
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search"> <input type="search"
+          class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search"> </form>
+      <div class="text-end"> <button type="button" class="btn btn-outline-light me-2">Login</button>
+        <button type="button" class="btn btn-warning">Sign-up</button>
       </div>
     </div>
   </div>
+  </nav>
+<!-- Fim Barra De Navegação Desktop -->
 
+  
+<!-- Barra De Navegação Mobile -->
+  <nav class="d-block d-md-none navbar navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Offcanvas dark navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+        aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+        aria-labelledby="offcanvasDarkNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex mt-3" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </nav>
+</header>
+<!-- Fim Barra De Navegação Mobile -->
 
+  <body>
     <main class="painel-container d-flex justify-content-start">
       <div class="grid-cards d-grid">
-        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/administração.jpg" alt="Imagem 1"></div>
-        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/agronegocio.jpg" alt="Imagem 2"></div>
-        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/comercio.jpg" alt="Imagem 3"></div>
-        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/educação.jpg" alt="Imagem 4"></div>
-        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/engenharia.jpg" alt="Imagem 5"></div>
-        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/saude.jpg" alt="Imagem 6"></div>
-        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/serviços.jpg" alt="Imagem 7"></div>
-        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/tecnologia.jpg" alt="Imagem 8"></div>
+        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/administração.jpg"
+            alt="Imagem 1"></div>
+        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/agronegocio.jpg"
+            alt="Imagem 2"></div>
+        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/comercio.jpg"
+            alt="Imagem 3">
+        </div>
+        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/educação.jpg"
+            alt="Imagem 4">
+        </div>
+        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/engenharia.jpg"
+            alt="Imagem 5"></div>
+        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/saude.jpg" alt="Imagem 6">
+        </div>
+        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/serviços.jpg"
+            alt="Imagem 7">
+        </div>
+        <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/tecnologia.jpg"
+            alt="Imagem 8"></div>
       </div>
     </main>
-  
+
     <script src="/JS/loginPessoaFisica.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 
 </html>
