--- a/HTML/inicio_pessoa_fisica.html
+++ b/HTML/inicio_pessoa_fisica.html
@@ -92,6 +92,211 @@
 <!-- Fim Barra De Navegação Mobile -->
 
   <body>
+      <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+          <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light">Bem Vindo (nome usuario)!</h1>
+            <p class="lead text-body-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua.
+            </p> <a href="#" class="btn btn-primary my-2">Call to action</a> <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          </div>
+        </div>
+      </section>
+      <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col">
+              <div class="card shadow-sm"><svg aria-label="Placeholder: Thumbnail"
+                                class="bd-placeholder-img card-img-top" height="225"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="100%"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect fill="#55595c" height="225" width="100%"></rect><text x="50%" y="50%"
+                                fill="#eceeef" dy=".3em">Thumbnail</text>
+                              </svg>
+                              <div class="card-body">
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group"> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">View</button> <button type="button"
+                                            class="btn btn-sm btn-outline-secondary">Edit</button> </div> <small
+                                        class="text-body-secondary">9 mins</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+    <!--
     <main class="painel-container d-flex justify-content-start">
       <div class="grid-cards d-grid">
         <div class="card_pessoa_fisica border rounded-2"><img src="/IMG/categorias_trabalho/administração.jpg"
@@ -115,6 +320,7 @@
             alt="Imagem 8"></div>
       </div>
     </main>
+    -->
 
     <script src="/JS/loginPessoaFisica.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
